post mz meeting edits

--- a/writing/wojan_ecography_proposal.qmd
+++ b/writing/wojan_ecography_proposal.qmd
@@ -19,18 +19,16 @@ Chris Wojan~1~ (wojan002\@umn.edu), Allison Shaw~1~ (ashaw\@umn.edu), Meggan Cra
 
 Modeling Study
 
-**Summary:** (499 words)
+**Summary:**
 
-Dynamical disease models often assume homogeneous disease exposure among hosts, but exposure to pathogens can be heterogeneous in time and space. Further, systems with heterogeneous parasite exposure can have different disease outcomes than those predicted by models of homogeneous populations (citation). While coarse-scale spatial patterns of disease have been studied often, fine-scale spatial dynamics are less examined [@albery]. Systems with multi-host, environmentally transmitted macroparasites have potential for fine-scale heterogeneous disease exposure among hosts because there can be variable spatial overlap between host and parasite. In these systems, the host of a parasite at one life stage can spatially decouple the parasite's distribution relative to the hosts of the subsequent life stage.
+Dynamical disease models often assume homogeneous disease exposure among hosts, but exposure to pathogens can be heterogeneous in time and space. While coarse-scale spatial heterogeneity disease have been studied often, fine-scale spatial dynamics are less examined [@albery2022]. Spatially heterogeneous disease exposure at the fine-scale can occur when there is variable spatial overlap between host and parasite, like in systems with multi-host, environmentally transmitted macroparasites. In these systems, the host of a parasite at one life stage can spatially decouple the parasite's distribution relative to the hosts of the subsequent life stage.
 
-Spatial decoupling of parasites and hosts can arise for both ecto- and endoparasites. For example, larval *Ixodes scapularis* ticks that white-footed mice encounter and transmit Lyme disease to are dispersed in the environment based on where deer drop gravid adult females, not based on mouse space use. Also, the infection of humans by schistosomes depends spatially on where infected snails are shedding cercariae; the influence of human behavior operates only indirectly through snails. As result, fine-scale spatial heterogeneity in these systems has the chance to significantly alter prevalence.
+Spatial decoupling of parasites and hosts can lead to different disease outcomes compared to spatially coupled systems. For example, white-footed mice encounter larval *Ixodes scapularis* ticks based on where deer drop gravid adult females, not based on mouse space use. Mice then transmit Lyme disease and other pathogens to larvae, which determines the prevalence of diseases in nymphal ticks. Thus fine-scale spatial heterogeneity can alter dynamics of both ticks and the pathogens they carry. This is in contrast to disease systems where the spatial distributions of hosts and parasite/pathogen are more tightly linked (e.g., a single-host, directly transmitted virus).
 
-Further, hosts infected with macroparasites typically vary in the magnitude of their burdens. The distribution of these burdens in a population is usually overdispersed, with many hosts with very few parasites, and few hosts with many parasites. For tick-borne disease, the basic reproductive number of pathogens increases with greater aggregation of ticks on small mammal hosts [@harrison2012]. In the schistosomiasis system, symptoms in humans are associated with the burden of worms [@colley2014]. It is likely that variable spatial exposure among hosts leads to parasite burdens of different magnitudes.
-
-We ask how the abundance and clustering of parasites in the environment interact to influence the distribution of parasite burdens in host populations. We predict that clustered parasite arrangements will lead to overdispersed burden distributions, but the overdispersion will decrease with increasing parasite abundance.
+We aim to describe how the abundance and clustering of parasites in the environment interact to influence the distribution of parasite burdens in host populations. Hosts infected with macroparasites typically vary in the magnitude of their burdens and the distribution of these burdens in a population is usually overdispersed (i.e., many hosts with very few parasites and few hosts with many parasites). For tick-borne disease, the basic reproductive number of pathogens increases with greater overdispersion of ticks on small mammal hosts [@harrison2012]. In the schistosomiasis system, symptoms in humans are associated with the magnitude of the worm burden [@colley2014]. It is likely that variable spatial exposure among hosts leads to parasite burdens of different magnitudes. We predict that clustered parasite arrangements will lead to overdispersed burden distributions, but the overdispersion will decrease with increasing parasite abundance.
 
 We explore these patterns with a system-agnostic spatially-explicit individual-based model. First we generate "parasite landscapes" with an algorithm that allows for modifying the number of parasites and the spatial autocorrelation of the parasite arrangement. Then we simulate movement of hosts on these landscapes with random walks, allowing for accumulation of parasites with exposure. Then we can measure how the dispersion (variance:mean ratio) changes with parasite abundance and clustering across many simulations. Preliminary results show an increase in burden dispersion with parasite clustering.
 
-The results of this work will identify population parameters of multi-host, environmental macro-parasites where homogeneous models may inaccurately predict dynamics. Applied to the Lyme disease system, the results may help elucidate patterns of tick burdens on mice, for which studies have found conflicting explanations [@mowry2019]. Further, the work may help further inform studies that account for transmission heterogeneity in schistosomiasis, which have revealed complex dynamics [@mari2017]. Generally, this project will provide part of a theoretical foundation for the importance of fine-scale spatial patterns in disease ecology.
+The results of this work will identify population parameters of multi-host, environmental macro-parasites where homogeneous models may inaccurately predict dynamics. Applied to the Lyme disease system, the results may elucidate patterns of tick burdens on mice, for which studies have found conflicting explanations [@mowry2019]. Further, the complex dynamics transmission heterogeneity in schistosomiasis [@mari2017] may also be informed by the work. Generally, this project will provide part of a theoretical foundation for the importance of fine-scale spatial patterns in disease ecology.
 
 **Literature Cited:**
