--- a/writing/references.bib
+++ b/writing/references.bib
@@ -63,3 +63,18 @@
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022519317303818},
 	langid = {en}
 }
+
+@article{albery2022,
+	title = {Fine{-}scale spatial patterns of wildlife disease are common and understudied},
+	author = {Albery, Gregory F. and Sweeny, Amy R. and Becker, Daniel J. and Bansal, Shweta},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	journal = {Functional Ecology},
+	pages = {214--225},
+	volume = {36},
+	number = {1},
+	doi = {10.1111/1365-2435.13942},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/1365-2435.13942},
+	langid = {en}
+}
