made a faster landscape percolator!

--- a/sdp_clustering_and_abundance_nb.Rmd
+++ b/sdp_clustering_and_abundance_nb.Rmd
@@ -699,4 +699,230 @@ size_moran_test %>%
 
 I guess there might not be much of a relationship between size and moran variance...
 
+#### Faster Landscape Algortihms
+
 Errant thought: what if the ls_percolator didn't loop for each parasite point, just randomly placed the first one, and then placed everything after that?
+
+```{r}
+
+##
+# Basic Landscape Percolator Function 
+##
+
+#' Function inputs:
+#' size, as one dimension (e.g. 12 -> 12 x 12 grid)
+#' prop, proportion of landscape filled
+#' cluster, degree to which percolation is spatially correlated
+#' Requires:
+#' tidyverse
+#' som.nn
+#' ape
+
+ls_percolator <- function(size, prop, cluster){
+  ## Calculate number of cells to fill based on size and prop
+  potential <- floor((size^2) * prop)
+  ## Create empty data representing the landscape
+  coords <- tibble(x = rep(1:size, size), 
+                   y = rep(1:size, each = size),
+                   id = str_c(x, y, sep = "_"),
+                   weight = rep(1, size^2), # Weight starts equal for all cells
+                   value = rep(0, size^2)) # Cell type starts out as 0 for all
+  
+  ## Initialize the possible percolation locations
+  possibles <- coords$id
+  
+  ## Pick a random cell (weighted by the "weight" column) to set as landscape value "1"
+  point <- sample(possibles, size = 1, prob = coords[coords$id %in% possibles,]$weight)
+  coords[coords$id %in% point, "value"] <- 1
+  
+  ## Create vectors of all cells with value 1 and 0
+  ones <- coords[coords$value == 1,]$id
+  zeroes <- coords[coords$value == 0,]$id
+  
+  ## Loop through each cell with value 0
+  for(i in zeroes){
+    ## Save its cordinates as a vector of length 2
+    coords_i <- coords[coords$id %in% i, c("x", "y")]
+    ## Initialize its distances to cells with value 1
+    dists_i <- NULL
+    ## Loop through each cell with value 1
+    for(j in ones){
+    ## Save the jth 1 cell's coordinates as a vector of length 2
+      coords_j <- coords[coords$id %in% j, c("x", "y")]
+      ## Calculate the euclidean distance between the ith 0 cell and the jth 1 cell
+      dist_ij <- sqrt((coords_j$x - coords_i$x)^2 + (coords_j$y - coords_i$y)^2)
+      ## Add the ij distance to the list of distances for the ith 0 cell
+      dists_i <- c(dists_i, dist_ij)
+    }
+    ## Create an object that represents the inverse minimum distance between the ith 0 cell and a 1 cell
+    inv_dist <- 1/min(dists_i)
+    ## Update the weight for the ith 0 cell, accounting for the cluster factor as an exponent
+    coords[coords$id %in% i, "weight"] <- (1 + inv_dist)^cluster
+  }
+  
+  
+
+    
+
+  
+  ## Create a distance matrix of each point assuming a torus shape
+  ls_dists <- as.matrix(som.nn::dist.torus(cbind(coords$x, coords$y)))
+  
+  ## Invert the distance matrix
+  ls_dists_inv <- 1/ls_dists
+  diag(ls_dists_inv) <- 0
+  
+  ## Calculate Moran's I spatial autocorrelation from the inverse distance matrix
+  moran_result <- Moran.I(coords$value, ls_dists_inv)
+  
+  ## Save the statistical output from the Moran test
+  ls_stats <- tibble(cluster = cluster, 
+                    moran = moran_result$observed, 
+                    p = moran_result$p.value)
+  
+  ## Save a list of the coordinates data frame, a landscape matrix, and the Moran stats
+  landscape <- list(coords = coords, 
+                    matrix = matrix(coords$value, nrow = size, ncol = size),
+                    ls_stats = ls_stats)
+
+  ## Return that landscape list
+  return(landscape)
+}
+
+size <- 12
+coords <- tibble(x = rep(1:size, size), 
+                   y = rep(1:size, each = size),
+                   id = str_c(x, y, sep = "_"),
+                   weight = rep(1, size^2), # Weight starts equal for all cells
+                   value = rep(0, size^2)) # Cell type starts out as 0 for all
+
+point <- sample(coords$id, size = 1)
+
+coords[coords$id %in% point, "value"] <- 1
+
+point_index <- which(coords$id == point)
+
+dists <- 1/as.matrix(dist.torus(cbind(coords$x, coords$y)))[point_index,]
+
+coords$weight <- dists
+```
+
+Wait! What if I use the dist function instead of loops?
+
+```{r}
+
+size <- 12
+coords <- tibble(x = rep(1:size, size), 
+                   y = rep(1:size, each = size),
+                   id = str_c(x, y, sep = "_"),
+                   weight = rep(1, size^2), # Weight starts equal for all cells
+                   value = rep(0, size^2)) # Cell type starts out as 0 for all
+
+coords$value <- rbinom(n = size^2, size = 1, prob = 0.25)
+
+ones <- coords$value == 1
+
+inv_dists <- 1/as.matrix(dist(cbind(coords$x, coords$y)))
+diag(inv_dists) <- 0
+
+inv_dists_filt <- inv_dists[, ones]
+
+coords$weight <- map_dbl(1:nrow(inv_dists_filt), function(x){max(inv_dists_filt[x,])})
+```
+
+seems like it could work....
+
+```{r}
+
+##
+# Basic Landscape Percolator Function 
+##
+
+#' Function inputs:
+#' size, as one dimension (e.g. 12 -> 12 x 12 grid)
+#' prop, proportion of landscape filled
+#' cluster, degree to which percolation is spatially correlated
+#' Requires:
+#' tidyverse
+#' som.nn
+#' ape
+
+fast_ls_perc <- function(size, prop, cluster){
+  ## Calculate number of cells to fill based on size and prop
+  potential <- floor((size^2) * prop)
+  ## Create empty data representing the landscape
+  coords <- tibble(x = rep(1:size, size), 
+                   y = rep(1:size, each = size),
+                   id = str_c(x, y, sep = "_"),
+                   weight = rep(1, size^2), # Weight starts equal for all cells
+                   value = rep(0, size^2)) # Cell type starts out as 0 for all
+  
+  ## Initialize the possible percolation locations
+  possibles <- coords$id
+  ## Percolate as many cells as need to be filled
+  for(p in seq_len(potential)){
+    
+    ## Pick a random cell (weighted by the "weight" column) to set as landscape value "1"
+    point <- sample(possibles, size = 1, prob = coords[coords$id %in% possibles,]$weight)
+    coords[coords$id %in% point, "value"] <- 1
+    
+    ## Record current ones
+    ones <- coords$value == 1
+    
+    ## Make an inverse distance matrix of all points
+    inv_dists <- 1/as.matrix(dist(cbind(coords$x, coords$y)))
+    ## Remove Inf values
+    diag(inv_dists) <- 0
+    
+    ## Select only the columns of points with 1 as their value
+    inv_dists_filt <- as.matrix(inv_dists[,ones])
+    
+    ## Assign the weights as each point's nearest distance to a 1 
+    coords$weight <- map_dbl(1:nrow(inv_dists_filt), 
+                             function(x){
+                               (1 + max(inv_dists_filt[x,]))^cluster
+                               })
+    
+    ## Refill the possible cells for percolation as only the remaining zeroes
+    possibles <- coords %>%
+      filter(value == 0) %>%
+      #slice_max(weight, n = floor((length(coords$weight) * cluster))) %>%
+      pull(id)
+    
+  }
+  
+  ## Create a distance matrix of each point assuming a torus shape
+  ls_dists <- as.matrix(som.nn::dist.torus(cbind(coords$x, coords$y)))
+  
+  ## Invert the distance matrix
+  ls_dists_inv <- 1/ls_dists
+  diag(ls_dists_inv) <- 0
+  
+  ## Calculate Moran's I spatial autocorrelation from the inverse distance matrix
+  moran_result <- Moran.I(coords$value, ls_dists_inv)
+  
+  ## Save the statistical output from the Moran test
+  ls_stats <- tibble(cluster = cluster, 
+                    moran = moran_result$observed, 
+                    p = moran_result$p.value)
+  
+  ## Save a list of the coordinates data frame, a landscape matrix, and the Moran stats
+  landscape <- list(coords = coords, 
+                    matrix = matrix(coords$value, nrow = size, ncol = size),
+                    ls_stats = ls_stats)
+
+  ## Return that landscape list
+  return(landscape)
+}
+
+
+Sys.time()
+test_ls <- fast_ls_perc(size = 25, prop = 0.25, cluster = 10)
+Sys.time()
+
+walk(seq(0,10,1), function(x){
+  plot(raster(fast_ls_perc(size = 25, prop = 0.25, cluster = x)$matrix))})
+
+```
+
+It works! Much faster. But can it be made faster by changing the for loop to a while loop and modifying the rate at which cells are filled from one at a time to higher?
