--- a/sdp_clustering_and_abundance_nb.Rmd
+++ b/sdp_clustering_and_abundance_nb.Rmd
@@ -917,12 +917,156 @@ fast_ls_perc <- function(size, prop, cluster){
 
 
 Sys.time()
-test_ls <- fast_ls_perc(size = 25, prop = 0.25, cluster = 10)
+test_ls <- fast_ls_perc(size = 50, prop = 0.25, cluster = 10)
 Sys.time()
 
-walk(seq(0,10,1), function(x){
+plot(raster(test_ls$matrix))
+
+walk(seq(0,100,10), function(x){
   plot(raster(fast_ls_perc(size = 25, prop = 0.25, cluster = x)$matrix))})
 
 ```
 
-It works! Much faster. But can it be made faster by changing the for loop to a while loop and modifying the rate at which cells are filled from one at a time to higher?
+It works! Much faster. But can it be made faster by changing the for loop to a while loop and modifying the rate at which cells are filled from one at a time to higher? Maybe not a while loop...
+
+```{r}
+size <- 12
+prop <- 0.30
+
+potential <- floor((size^2) * prop)
+
+rate <- 2
+
+ceiling(potential/rate)
+
+
+
+
+```
+
+```{r}
+
+fast_ls_perc <- function(size, prop, cluster, rate = 1, batch_cluster){
+  ## Calculate number of cells to fill based on size and prop
+  potential <- floor((size^2) * prop)
+  ## Calculate number of iterations
+  iters <- ceiling(potential / rate)
+  ## Save remainder
+  remainder <- potential %% rate
+  ## Create empty data representing the landscape
+  coords <- tibble(x = rep(1:size, size), 
+                   y = rep(1:size, each = size),
+                   id = str_c(x, y, sep = "_"),
+                   weight = rep(1, size^2), # Weight starts equal for all cells
+                   value = rep(0, size^2), # Cell type starts out as 0 for all
+                   batch_start = rep(0, size^2),
+                   batch_weight = rep(1, size^2)) 
+  
+  ## Initialize the possible percolation locations and ones
+  possibles <- coords$id
+  ones <- coords$value == 1
+  ## Percolate as many cells as need to be filled
+  for(p in seq_len(iters)){
+    
+    ## Pick a random cell (weighted by the "weight" column) to set as landscape value "1"
+    point <- sample(possibles, size = 1, prob = coords[coords$id %in% possibles,]$weight)
+    coords[coords$id %in% point, "value"] <- 1
+    
+    if(rate > 1){
+      coords[coords$id %in% point, "batch_start"] <- 1
+      batch_size <- if_else(potential - rate > sum(ones), rate, remainder)
+      batch_size <- if_else(batch_size > 1, batch_size - 1, batch_size)
+      
+      ## Make an inverse distance matrix of all points
+      inv_dists <- 1/as.matrix(dist(cbind(coords$x, coords$y)))
+      ## Remove Inf values
+      diag(inv_dists) <- 0
+      
+      ## Select only the column of the batch start point
+      inv_dists_filt <- as.matrix(inv_dists[,coords$batch_start == 1])
+      
+      ## Save weights
+      coords$batch_weight <- map_dbl(1:nrow(inv_dists_filt), 
+                               function(x){
+                                (1 + max(inv_dists_filt[x,]))^batch_cluster
+                               })
+      
+      batch_points <- sample(possibles, size = batch_size, prob = coords[coords$id %in% possibles,]$batch_weight)
+      coords[coords$id %in% batch_points, "value"] <- 1
+      
+      coords$batch_start <- 0
+    }
+    
+    ## Record current ones
+    ones <- coords$value == 1
+    
+    ## Make an inverse distance matrix of all points
+    inv_dists <- 1/as.matrix(dist(cbind(coords$x, coords$y)))
+    ## Remove Inf values
+    diag(inv_dists) <- 0
+    
+    ## Select only the columns of points with 1 as their value
+    inv_dists_filt <- as.matrix(inv_dists[,ones])
+    
+    ## Assign the weights as each point's nearest distance to a 1 
+    coords$weight <- map_dbl(1:nrow(inv_dists_filt), 
+                             function(x){
+                               (1 + max(inv_dists_filt[x,]))^cluster
+                               })
+    
+    ## Refill the possible cells for percolation as only the remaining zeroes
+    possibles <- coords %>%
+      filter(value == 0) %>%
+      #slice_max(weight, n = floor((length(coords$weight) * cluster))) %>%
+      pull(id)
+    
+  }
+  
+  ## Create a distance matrix of each point assuming a torus shape
+  ls_dists <- as.matrix(som.nn::dist.torus(cbind(coords$x, coords$y)))
+  
+  ## Invert the distance matrix
+  ls_dists_inv <- 1/ls_dists
+  diag(ls_dists_inv) <- 0
+  
+  ## Calculate Moran's I spatial autocorrelation from the inverse distance matrix
+  moran_result <- Moran.I(coords$value, ls_dists_inv)
+  
+  ## Save the statistical output from the Moran test
+  ls_stats <- tibble(cluster = cluster, 
+                    moran = moran_result$observed, 
+                    p = moran_result$p.value)
+  
+  ## Save a list of the coordinates data frame, a landscape matrix, and the Moran stats
+  landscape <- list(coords = coords, 
+                    matrix = matrix(coords$value, nrow = size, ncol = size),
+                    ls_stats = ls_stats)
+
+  ## Return that landscape list
+  return(landscape)
+}
+
+Sys.time()
+test_ls <- fast_ls_perc(size = 48, prop = 0.25, cluster = 10, rate = 1)
+Sys.time()
+
+plot(raster(test_ls$matrix))
+
+48^2
+
+walk(c(1, seq(10,100,10)), function(x){
+  plot(raster(fast_ls_perc(size = 30, prop = 0.25, cluster = 10, rate = x, batch_cluster = 25)$matrix))})
+
+```
+
+Trying to figure out a batch clustering to clustering ratio...
+
+for size 30, prop 0.25, cluster 10
+
+batch cluster 15 for rate 10
+
+batch cluster 25 for rate 30
+
+... I don't think a perfect ratio can be found, it may be best to let cluster and batch cluster freely vary.
+
+Also, my function can't do large landscapes (e.g. 256 x 256)
